fixing loading cube spinning on mobile safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,7 @@ body {
         animation-timing-function: cubic-bezier(0.76, 0.05, 0.86, 0.06);
     }
     100% {
-        transform: rotateX(45deg) rotateY(0) rotateZ(405deg);
+        transform: rotateX(45deg) rotateY(0) rotateZ(505deg);
         animation-timing-function: cubic-bezier(0.17, 0.84, 0.44, 1);
     }
 }
